fix: update layout and styling for right column and carousel spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 #position_1 {
   display: flex;
-  gap: 20px;
+  gap: 30px;
 
 }
 
@@ -45,6 +45,13 @@ body {
 
 .deviceInfoPanel {
   display: flex;
+}
+
+
+.right_column_div {
+  display: flex; 
+  flex-direction: column;
+  gap: 30px;
 }
 
 .deviceImage {
@@ -136,7 +143,7 @@ carousel-track {
 
 
 .carousel.active {
-  max-width: calc(100% - 30px);
+   max-width: calc(100% - 60px);
   max-height: 436px;
   /* margin-bottom: 300px; */
   opacity: 1;
